--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,21 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.GameBoard {
+  max-width: 395px;
+  height: 395px;
+  margin: 50px auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Square {
+  display: inline-block;
+  width: 19%;
+  margin: 0.5%;
+  height: 19%;
+  background: #03707b;
+  color: #ffffff;
+  font-size: 40px;
+  font-weight: 500;
+  text-align: center;
+  line-height: 70px;
 }
