--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,6 @@
   width: 19%;
   margin: 0.5%;
   height: 75px;
-  background: #ffffff;
   color: #ffffff;
   font-size: 35px;
   font-weight: 500;
@@ -32,4 +31,29 @@
 
 .Square.disabled{
   cursor: default;
+}
+
+.InfoField{
+  width: 395px;
+  margin: 50px auto;
+}
+
+.CurrentNumber{
+  width: 140px;
+}
+
+.CurrentNumber span{
+  display: block;
+  font-size: 18px;
+  margin-bottom: 5px;
+  color: #014950;
+}
+
+.CurrentNumber div{
+  width: 100px;
+  background: #014950;
+  font-size: 30px;
+  color: #ffffff;
+  padding: 10px 20px;
+  border-radius: 5px;
 }
